fix upload xam devoir
